--- a/ProjetoCheckBike/src/main/webapp/resources/css/teste2.css
+++ b/ProjetoCheckBike/src/main/webapp/resources/css/teste2.css
@@ -16,6 +16,7 @@ h1 {
 	margin-top:50px;
 }
 
+
 .botaoProximo {
 	width: 14%;
 	background-color: black;
@@ -52,4 +53,40 @@ h1 {
 .insert{
 	margin-top:160px;
 	margin-left:20px;
+}
+
+
+.refresh {
+	width: 6%;
+	background-color: black;
+	color: white;
+	padding: 12px 12px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+	font-size: 18px;
+	margin-left:90%;
+	height:60px;
+	margin-top:15%;
+}
+
+
+.inicio {
+	width: 6%;
+	background-color: black;
+	color: white;
+	padding: 12px 12px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+	font-size: 18px;
+	margin-left:2%;
+	height:60px;
+	
+}
+
+.classInicio{
+	margin-top:-80px;
 }
